--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.1",
+    "file-loader": "^6.1.0",
+    "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.3.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
