--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "sweetalert2": "^10.3.5"
   }
 }
